[project]
name = "cdb"
version = "0.1.0"
description = "AI-friendly debugger interface built on lldb/gdb"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
cdb-mcp = "cdb.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdb"]

[dependency-groups]
dev = ["pytest"]
